@@ -1,10 +1,11 @@
 
-
 - replaced popups when Poedit is started for the first time with
   unobtrusive Firefox-style notifications
-- Boost library is now required when compiling from sources
 - selecting suggested translation from right-click popup menu now
   correctly removes fuzzy flag from the translation
+- Warn the user if Plural-Forms header is inconsistent with the number
+  of plural translations in the catalog
+- Boost library is now required when compiling from sources
 
 
 Version 1.4.1
